<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="eu.barononline.rggapp.TrainingDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|center">

        <TextView
            android:id="@+id/from_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/training_detail_label_margin_start"
            android:layout_marginTop="@dimen/training_detail_label_margin_top"
            android:text="@string/training_from_date_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/training_detail_label_margin_start"
            android:layout_marginTop="@dimen/training_detail_label_margin_top"
            android:text="@string/training_to_date_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_label" />

        <TextView
            android:id="@+id/trainer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/training_detail_label_margin_start"
            android:layout_marginTop="@dimen/training_detail_label_margin_top"
            android:text="@string/training_trainer_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_label" />

        <TextView
            android:id="@+id/training_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/training_detail_label_margin_start"
            android:layout_marginTop="@dimen/training_detail_label_margin_top"
            android:text="@string/training_type_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trainer_label" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="from_label,to_label,trainer_label,training_type_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="384dp" />

        <TextView
            android:id="@+id/from_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/info_loading"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/from_label"
            app:layout_constraintStart_toEndOf="@+id/barrier5"
            app:layout_constraintTop_toTopOf="@+id/from_label" />

        <TextView
            android:id="@+id/to_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/info_loading"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/to_label"
            app:layout_constraintStart_toEndOf="@+id/barrier5"
            app:layout_constraintTop_toTopOf="@+id/to_label" />

        <TextView
            android:id="@+id/trainer_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/info_loading"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/trainer_label"
            app:layout_constraintStart_toEndOf="@+id/trainer_label"
            app:layout_constraintTop_toTopOf="@+id/trainer_label" />

        <TextView
            android:id="@+id/training_type_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/info_loading"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/training_type_label"
            app:layout_constraintStart_toEndOf="@+id/barrier5"
            app:layout_constraintTop_toTopOf="@+id/training_type_label" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="64dp"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
